--- a/iot-manager-api/src/main/resources/application.properties
+++ b/iot-manager-api/src/main/resources/application.properties
@@ -9,3 +9,8 @@ spring.datasource.username=${MYSQL_USER:user}
 spring.datasource.password=${MYSQL_PASSWORD:password}
 
 spring.jpa.show-sql=true
+
+# springdoc.api-docs.path=/v3/api-docs
+# springdoc.swagger-ui.path=/swagger-ui.html
+
+spring.jackson.deserialization.fail-on-unknown-properties=true
