corrigir query e adicionar scripts de desenvolvimento

--- a/.env-example
+++ b/.env-example
@@ -3,3 +3,6 @@ MYSQL_DATABASE=
 MYSQL_USER=
 MYSQL_PASSWORD=
 MYSQL_PORT=
+
+# é usado apenas quando a aplicação vai ser excutada através do script run_spring-app.sh
+MYSQL_HOST=
