--- a/iot-manager-api/src/main/resources/application.properties
+++ b/iot-manager-api/src/main/resources/application.properties
@@ -1,14 +1,16 @@
-spring.jpa.database=MYSQL
-
 # spring.datasource.url=jdbc:mysql://localhost:3306/iot-manager-api?createDatabaseIfNotExist=true\&useSSL=false
 # spring.datasource.username=user
 # spring.datasource.password=password
 
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DATABASE:iot-manager-api}?createDatabaseIfNotExist=true\&useSSL=false\&allowPublicKeyRetrieval=true
-spring.datasource.username=${MYSQL_USER:user}
-spring.datasource.password=${MYSQL_PASSWORD:password}
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:${MYSQL_PORT}/${MYSQL_DATABASE}?createDatabaseIfNotExist=true\&useSSL=false\&allowPublicKeyRetrieval=true
+spring.datasource.username=${MYSQL_USER}
+spring.datasource.password=${MYSQL_PASSWORD}
 
+spring.jpa.database=MYSQL
 spring.jpa.show-sql=true
+
+# spring.jpa.hibernate.ddl-auto=create-drop
+# spring.jpa.hibernate.ddl-auto=create
 
 # springdoc.api-docs.path=/v3/api-docs
 # springdoc.swagger-ui.path=/swagger-ui.html
