--- a/docker/dev/Dockerfile.spring
+++ b/docker/dev/Dockerfile.spring
@@ -2,9 +2,9 @@ FROM maven:3.8.5-openjdk-17
 
 WORKDIR /app
 
-COPY ./iot-manager-api/pom.xml /app/pom.xml
+# COPY ./iot-manager-api/pom.xml /app/pom.xml
 
-RUN mvn dependency:go-offline
+# RUN mvn dependency:go-offline
 
 EXPOSE 8080
 
